feat: conclui section de exibição do primeiro produto

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <li>CONTATO</li>
     </ul>
   </header>
-  <main>
-    <section>
-        <h2>Bicicletas Feitas a mão</h2>
+  <main class="main">
+    <section class="section-1">
+        <h1>Bicicletas Feitas a mão</h1>
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca</p>
-        <a href=""></a>
+        <a class="btn" href="/">VER MAIS</a>
     </section>
-    <img src="/img/bicicleta.jpg" alt="">
+    <img class="img" src="/img/bicicleta.jpg" alt="bicicleta">
   </main>
   <footer>
 
