feat: subindo arquivos da section 2 do site

--- a/index.html
+++ b/index.html
@@ -15,13 +15,33 @@
         <li>CONTATO</li>
     </ul>
   </header>
-  <main class="main">
+  <main class="main">  
     <section class="section-1">
         <h1>Bicicletas Feitas a mão</h1>
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca</p>
         <a class="btn" href="/">VER MAIS</a>
     </section>
     <img class="img" src="/img/bicicleta.jpg" alt="bicicleta">
+    <section class="section-text-title-2">
+      <h1 class="title-2">VANTAGENS BIKCRAFT</h1>
+    </section>
+    <section class="section-texts"> 
+      <div>
+        <img src="/img/eletrica.svg" alt="">
+        <h2>Motor elétrico</h2>
+        <p>Permite você viajar distâncias inimaginaveis com a sua bike</p>
+      </div>
+      <div>
+        <img src="/img/velocidade.svg" alt="">
+        <h2>40km/H</h2>
+        <p>A mais rápida bicicleta elétrica disponível hoje no mercado</p>
+      </div>
+      <div>
+        <img src="/img/rastreador.svg" alt="">
+        <h2>Rastreador</h2>
+        <p>Rastreador e sistema anti-furto para garantir o seu sossego</p>
+      </div>
+    </section>
   </main>
   <footer>
 
