feat: ajusta posicionamento dos items na section 2

--- a/index.html
+++ b/index.html
@@ -26,19 +26,25 @@
       <h1 class="title-2">VANTAGENS BIKCRAFT</h1>
     </section>
     <section class="section-texts"> 
-      <div>
-        <img src="/img/eletrica.svg" alt="">
-        <h2>Motor elétrico</h2>
+      <div class="item">
+        <div class="item-icon">
+          <img src="/img/eletrica.svg" alt="">
+          <h2>Motor elétrico</h2>
+        </div>
         <p>Permite você viajar distâncias inimaginaveis com a sua bike</p>
       </div>
-      <div>
-        <img src="/img/velocidade.svg" alt="">
-        <h2>40km/H</h2>
+      <div class="item">
+        <div class="item-icon">
+          <img src="/img/velocidade.svg" alt="">
+          <h2>40km/H</h2>
+        </div>
         <p>A mais rápida bicicleta elétrica disponível hoje no mercado</p>
       </div>
-      <div>
-        <img src="/img/rastreador.svg" alt="">
-        <h2>Rastreador</h2>
+      <div class="item">
+        <div class="item-icon">
+          <img src="/img/rastreador.svg" alt="">
+          <h2>Rastreador</h2>
+        </div>
         <p>Rastreador e sistema anti-furto para garantir o seu sossego</p>
       </div>
     </section>
