feat: conclue section 2 e insere footer

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <a class="btn" href="/">VER MAIS</a>
     </section>
     <img class="img" src="/img/bicicleta.jpg" alt="bicicleta">
+
     <section class="section-text-title-2">
       <h1 class="title-2">VANTAGENS BIKCRAFT</h1>
     </section>
+
     <section class="section-texts"> 
       <div class="item">
         <div class="item-icon">
@@ -50,7 +52,7 @@
     </section>
   </main>
   <footer>
-
+    <h2 class="footer-text">Bikcraft. Alguns Direitos Reservados.</h2>
   </footer>
 </body>
 </html>
